Should solve issue #493  : collapsed group in filter mode do not show any content

--- a/app/src/js/nested_list/style/nested_list.css
+++ b/app/src/js/nested_list/style/nested_list.css
@@ -16,7 +16,7 @@
 
 
 .li-item.li-item-hidden,
-.li-group.li-group-collapsed .li-item,
+.li-group.li-group-collapsed:not(.li-group-invisible) .li-item,
 .li-group.li-group-collapsed .li-group {
   display: none;
 }
